0032720: Coding Rules - rename glext.h to OpenGl_glext.h